P04_modularize_fertig | Alle Makefiles mit explizietem pfad in dynamischen pfad geändert

--- a/P04_Modularisieren_von_C_Code/work/modularize/Makefile
+++ b/P04_Modularisieren_von_C_Code/work/modularize/Makefile
@@ -1,8 +1,23 @@
-SNP_SHARED_MAKEFILE := $(if $(SNP_SHARED_MAKEFILE),$(SNP_SHARED_MAKEFILE),~/snp/shared.mk)
+# Dynamically set the base directory for SNP based on the current directory (CURDIR)
+SNP_BASE_DIR := $(realpath $(CURDIR)/../../..)
 
-TARGET     := bin/triangle
-SOURCES    := src/triangle.c src/read.c src/rectang.c
+$(info SNP_BASE_DIR = $(SNP_BASE_DIR))
+
+# Set the target (triangle executable)
+TARGET := bin/triangle
+
+# Include paths (correct the path for test_utils.h)
+CFLAGS := -std=c99 -Wall -pedantic -g -MD -Isrc -Itests -I/home/senobare/Developer/ZHAW/Sem4/SNP/testlib/include -I/usr/include/CUnit -DTARGET=$(TARGET)
+
+# Sources and object files
+SOURCES := src/triangle.c src/read.c src/rectang.c
 TSTSOURCES := tests/tests.c
-LIBS       := -lm
 
-include $(SNP_SHARED_MAKEFILE)
+# Libraries
+LIBS := -lm -lcunit
+
+# Define the output binary
+OUTPUT := $(TARGET)
+
+# Include shared.mk (ensure this file exists and is correct)
+include $(SNP_BASE_DIR)/shared.mk
