--- a/P05_TicTacToe/work/tic-tac-toe/Makefile
+++ b/P05_TicTacToe/work/tic-tac-toe/Makefile
@@ -1,4 +1,6 @@
-SNP_SHARED_MAKEFILE := $(if $(SNP_SHARED_MAKEFILE),$(SNP_SHARED_MAKEFILE),~/snp/shared.mk)
+SNP_BASE_DIR := $(realpath $(CURDIR)/../../..)
+
+SNP_SHARED_MAKEFILE := $(if $(SNP_SHARED_MAKEFILE),$(SNP_SHARED_MAKEFILE),$(SNP_BASE_DIR)/shared.mk)
 
 TARGET     := bin/tic-tac-toe
 MODULES    := src/model.c src/view.c src/control.c
